--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/comp3015db
 spring.datasource.username=root
-spring.datasource.password=comp3015
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
